<resources>
    <string name="app_name">"Aiscrim"</string>

    <string name="action_settings">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="action_carrito">Añadir al carrito</string>
    <string name="nombre_usuario">Ignacio Samuel Crespo Martinez</string>

    <string name="item_tienda">Tienda</string>
    <string name="item_cuenta">Mi Cuenta</string>
    <string name="item_seminuevos">Seminuevos</string>
    <string name="item_pedidos">Pedidos</string>
    <string name="item_cerrar_sesion">Cerrar Sesión</string>

    <string name="item_gestion_usuarios">Gestión Usuarios</string>
    <string name="item_gestion_proveedores">Gestión proveedores</string>
    <string name="item_gestion_videojuegos">Gestión videojuegos</string>
    <string name="item_gestion_pedidos">Gestión pedidos</string>

    <string name="titulo_comidas_populares">Lo más pedido</string>

    <string name="titulo_tab_platillos">PLATILLOS</string>
    <string name="titulo_tab_bebidas">BEBIDAS</string>
    <string name="titulo_tab_postres">POSTRES</string>

    <string name="titulo_tab_perfil">PERFIL</string>
    <string name="titulo_tab_direcciones">DIRECCIONES</string>
    <string name="titulo_tab_tarjetas">TARJETAS</string>

    <string name="texto_no_tarjetas">No tienes ninguna tarjeta asociada</string>

    <string name="etiqueta_carrito">Carrito</string>

    <string name="texto_cambiar_contrasena">Cambia tu contraseña</string>
    <string name="etiqueta_contrasena">Contraseña</string>
    <string name="etiqueta_info_usuario">Información del usuario</string>

    <string-array name="DiaTarjeta">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>08</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="Plataforma">
        <item>PS4</item>
        <item>XBOX_ONE</item>
    </string-array>

    <string-array name="tipo_producto">
        <item>Nuevo</item>
        <item>SemiNuevo</item>
    </string-array>

    <string-array name="YearTarjeta">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
    </string-array>

    <string-array name="TipoTarjeta">
        <item>Visa</item>
        <item>MasterCard</item>
        <item>American Express</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
