<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_tienda"
            android:checked="true"
            android:icon="@drawable/ic_shop_black"
            android:title="@string/item_tienda" />
        <item
            android:id="@+id/item_seminuevos"
            android:icon="@drawable/ic_shop_two_black"
            android:title="@string/item_seminuevos" />
        <item
            android:id="@+id/item_cuenta"
            android:icon="@drawable/cuenta"
            android:title="@string/item_cuenta" />
        <item
            android:id="@+id/item_pedidos"
            android:icon="@drawable/categorias"
            android:title="@string/item_pedidos" />

        <item
            android:id="@+id/item_cerar_sesion"
            android:icon="@drawable/ic_power_settings"
            android:title="@string/item_cerrar_sesion" />

    </group>

</menu>