<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dee4ee"
    android:orientation="vertical"
    android:padding="@dimen/espacio_norma_1">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/titulo_informacion_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/etiqueta_info_usuario"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boton_editar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@android:drawable/ic_menu_edit"
            android:background="#dee4ee"
            android:layout_alignParentTop="true"
            android:tint="#757575" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boton_guardar"
            android:src="@android:drawable/ic_menu_save"
            android:background="#dee4ee"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/titulo_informacion_usuario"
            android:layout_toEndOf="@+id/titulo_informacion_usuario"
            android:layout_marginLeft="114dp"
            android:layout_marginStart="114dp"
            android:visibility="invisible"
            android:tint="#757575" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="178dp"
            android:columnCount="2"
            android:padding="@dimen/espacio_norma_1"
            android:rowCount="4">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="@dimen/espacio_norma_2"
                android:src="@drawable/usuario" />

            <EditText
                android:id="@+id/texto_nombre"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="James"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginTop="10px"
                android:enabled="false"
                android:textColor="#000000">
            </EditText>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/espacio_norma_2"
                android:src="@drawable/email"
                android:layout_marginBottom="32dp" />

            <EditText
                android:id="@+id/texto_email"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="James"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginTop="10px"
                android:enabled="false"
                android:textColor="#000000">
            </EditText>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/espacio_norma_2"
                android:src="@drawable/technology"
                android:layout_marginBottom="32dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="center"
                android:tint="#757575" />

            <EditText
                android:id="@+id/texto_telefono"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="James"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginTop="10px"
                android:enabled="false"
                android:textColor="#000000">
            </EditText>
        </GridLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/titulo_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/espacio_norma_2"
        android:paddingTop="@dimen/espacio_norma_1"
        android:text="@string/etiqueta_contrasena"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true"
        android:id="@+id/imagebutton2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/espacio_norma_1">

            <ImageView
                android:id="@+id/icono_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:src="@drawable/contrasena" />

            <TextView
                android:id="@+id/texto_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/icono_password"
                android:text="@string/texto_cambiar_contrasena"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageView
                android:id="@+id/icono_indicador_derecho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/indicador_derecho" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>